--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.10.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-select": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
